styles fix and collapsing teams

--- a/frontend/src/components/styles.css
+++ b/frontend/src/components/styles.css
@@ -26,15 +26,27 @@
 }
 
 .calendar-table td:hover {
-    background-color: #f5f5f5; /* Highlight only the hovered cell */
+    background-color: rgba(245, 245, 245, 0.5); /* Light gray with 50% opacity. Highlight only the hovered cell */
 }
 
-.calendar-table colgroup col:hover {
-    background-color: #f5f5f5; /* Lightly highlight the column on hover */
+.team-name-cell .team-name {
+    margin-right: 10px; /* Adjust as needed */
 }
 
-.team-name-cell {
-    font-weight: bold;
+.delete-icon {
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.add-icon {
+    cursor: pointer;
+    margin-left: 10px;
+    color: #0000ff;
+}
+
+.collapse-icon {
+    cursor: pointer;
+    margin-right: 10px;
 }
 
 .weekend-column {
@@ -68,10 +80,4 @@ form button {
 
 form button:hover {
     background-color: #45a049;
-}
-
-.add-icon {
-    cursor: pointer;
-    margin-left: 10px;
-    color: #0000ff; /* Blue color for add icon */
 }
